--- a/testapp/templates/testapp/index.html
+++ b/testapp/templates/testapp/index.html
@@ -8,6 +8,7 @@
         <th>Employee Name</th>
         <th>employee Salary</th>
         <th>Employee Address</th>
+        <th>Action</th>
       </thead>
       {%for emp in employees%}
       <tr>
@@ -15,6 +16,7 @@
         <td>{{emp.ename}}</td>
         <td>{{emp.esal}}</td>
         <td>{{emp.eaddr}}</td>
+        <td> <a href="#">Update</a><a href="#">Delete</a></td>
       </tr>
       {%endfor%}
      </table>
