insert the employee records

--- a/testapp/templates/testapp/index.html
+++ b/testapp/templates/testapp/index.html
@@ -19,7 +19,8 @@
         <td> <a href="#">Update</a><a href="#">Delete</a></td>
       </tr>
       {%endfor%}
-     </table>
+     </table><br><br>
+     <a href="/create" class='btn btn-success btn-lg'>Insert New Employee</a>
    {%endblock%}
  
 
