curd function based view

--- a/testapp/templates/testapp/index.html
+++ b/testapp/templates/testapp/index.html
@@ -16,7 +16,7 @@
         <td>{{emp.ename}}</td>
         <td>{{emp.esal}}</td>
         <td>{{emp.eaddr}}</td>
-        <td> <a href="#">Update</a><a href="#">Delete</a></td>
+        <td> <a href="/update/{{emp.id}}">Update</a><a href="/delete/{{emp.id}}">Delete</a></td>
       </tr>
       {%endfor%}
      </table><br><br>
